--- a/scss/main.scss
+++ b/scss/main.scss
@@ -165,6 +165,85 @@
 }
 
 /***** FEATURED CARS SECTION *****/
+.featured {
+  background: $main-grey;
+
+  .featured-item {
+    background: $main-white;
+    border-radius: 0.5rem;
+    opacity: 0.5;
+    cursor: pointer;
+    @include easeInOut;
+
+    &:hover {
+      opacity: 1;
+      transform: scale(1.1);
+    }
+
+    .featured-icon {
+      font-size: 1.5rem;
+      color: $main-yellow;
+      cursor: pointer;
+      @include ease;
+
+      &:hover {
+        color: $main-blue;
+      }
+    }
+  }
+
+  .img-container {
+    background: $main-blue;
+    position: relative;
+
+    // stops image from expanding outside boundries of the container
+    overflow: hidden;
+
+    .featured-photo {
+      @include easeInOut;
+    }
+
+    &:hover .featured-photo {
+      transform: scale(1.3);
+      opacity: 0.5;
+    }
+
+    .featured-link {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      font-size: 3rem;
+      transform: translate(-50%, -50%);
+      color: $main-black;
+      opacity: 0;
+      @include easeInOut;
+
+      &:hover {
+        color: $main-white;
+      }
+    }
+
+    &:hover .featured-link {
+      opacity: 1;
+    }
+  }
+}
+
+/***** FOOTER SECTION *****/
+.footer {
+  background: $main-black;
+
+  .footer-icon {
+    font-size: 2rem;
+    text-decoration: none;
+    color: $main-yellow;
+    @include easeInOut;
+
+    &:hover {
+      color: $main-blue;
+    }
+  }
+}
 
 /***** MEDIA QUERIES *****/
 @media (min-width: 768px) {
